refactor(lesson): Improve lesson management and file handling
Refactor lesson management to use Long for IDs, update API endpoints, and enhance file handling logic. Improve S3 upload/delete error handling and private URL generation.